--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1057,6 +1057,45 @@
                        android:value="true" />
         </activity>
 
+        <!-- Button settings activity -->
+        <activity android:name="Settings$ButtonSettingsActivity"
+                android:label="@string/buttons_pref_title"
+                android:icon="@drawable/ic_button_settings"
+                android:taskAffinity=""
+                android:exported="true">
+            <intent-filter android:priority="1">
+                <action android:name="com.android.settings.BUTTON_SETTINGS" />
+                <action android:name="android.settings.BUTTON_SETTINGS" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.VOICE_LAUNCH" />
+                <category android:name="com.android.settings.SHORTCUT" />
+            </intent-filter>
+            <intent-filter android:priority="250">
+                <action android:name="com.android.settings.action.SETTINGS" />
+            </intent-filter>
+            <meta-data android:name="com.android.settings.category"
+                       android:value="com.android.settings.category.ia.system" />
+            <meta-data android:name="com.android.settings.FRAGMENT_CLASS"
+                android:value="com.android.settings.ButtonSettings" />
+            <meta-data android:name="com.android.settings.summary"
+                       android:resource="@string/button_pref_summary" />
+            <meta-data android:name="com.android.settings.PRIMARY_PROFILE_CONTROLLED"
+                android:value="true" />
+        </activity>
+
+        <!-- Keep compatibility with old shortcuts. -->
+        <activity-alias android:name="ButtonSettings"
+                android:label="@string/button_pref_title"
+                android:exported="true"
+                android:targetActivity="Settings$ButtonSettingsActivity">
+            <meta-data android:name="com.android.settings.FRAGMENT_CLASS"
+                android:value="com.android.settings.ButtonSettings" />
+        </activity-alias>
+
         <activity
             android:name="SettingsLicenseActivity"
             android:label="@string/settings_license_activity_title"
