--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3391,6 +3391,21 @@
                        android:value="true" />
         </activity>
 
+       <activity android:name=".network.telephony.UserPLMNListActivity"
+           android:label="@string/uplmn_settings_title"
+           android:configChanges="orientation|screenSize|keyboardHidden">
+           <intent-filter>
+               <action android:name="android.intent.action.MAIN" />
+            </intent-filter>
+        </activity>
+
+        <activity android:name=".network.telephony.UserPLMNEditorActivity"
+            android:label="@string/uplmn_settings_title"
+            android:configChanges="orientation|screenSize|keyboardHidden">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+            </intent-filter>
+        </activity>
         <!-- This is the longest AndroidManifest.xml ever. -->
     </application>
 </manifest>
