Add support for Paranoid FaceSense
Change-Id: I63cbf1f4cede9128b3f74db5f8a826d1dc023617

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -437,6 +437,17 @@
                 android:value="com.android.settings.biometrics.face.FaceSettings" />
         </activity>
 
+        <activity android:name="Settings$ParanoidFaceSettingsActivity"
+            android:label="@string/security_settings_face_preference_title"
+            android:icon="@drawable/ic_face_header">
+            <intent-filter>
+                <action android:name="android.settings.FACE_SETTINGS" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+            <meta-data android:name="com.android.settings.FRAGMENT_CLASS"
+                android:value="com.android.settings.biometrics.face.ParanoidFaceSettings" />
+        </activity>
+
         <activity android:name="Settings$FingerprintSettingsActivity"
                   android:label="@string/security_settings_fingerprint_preference_title"
                   android:icon="@drawable/ic_fingerprint_header">
